Packages, Routes, Middleware, App template

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/BaoPham92/Q-NodeJS/issues"
   },
-  "homepage": "https://github.com/BaoPham92/Q-NodeJS#readme"
+  "homepage": "https://github.com/BaoPham92/Q-NodeJS#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
+  }
 }
