--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/BaoPham92/Q-NodeJS#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "mysql": "^2.17.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
