--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-strap": "^0.0.1",
+    "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "styled-components": "^4.4.1"
   },
