creates sql install and update password in settings.json in sql

--- a/sql/settings.json
+++ b/sql/settings.json
@@ -6,7 +6,7 @@
             "isActive": true,
             "isConnected": true,
             "name": "localhost",
-            "password": "!F90452e7d",
+            "password": "itHeYAlOM",
             "port": 3306,
             "server": "localhost",
             "username": "root"
