--- a/login/package.json
+++ b/login/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app.js"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "express": "^4.17.1",
     "jade": "~1.11.0",
-    "morgan": "~1.8.1",
+    "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "serve-favicon": "~2.4.2"
   }
