--- a/login/package.json
+++ b/login/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./app.js"
+    "start": "node ./server.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
