--- a/login/package.json
+++ b/login/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.3",
     "express": "^4.17.1",
     "jade": "~1.11.0",
